# ML-System-Design

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
src/: app.py  locallama.py
src/api/: app.py  client.py
src/notebooks/running_pytorch_on_gpu/: test.ipynb
src/notebooks/text_classification_hugging_face/: ML-1-text_classfication-guide.ipynb
