[tool.poetry]
name = "ml-system-design"
version = "0.1.0"
description = "End to End ML Deployment"
authors = ["Aditya Rawat"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
requests = "^2.28.1"
boto3 = "^1.28.62"
jupyter = "^1.0.0"
beautifulsoup4 = "^4.12.2"
tqdm = "^4.65.0"
python-dotenv = "^1.0.0"
pylint = "^2.17.4"
botocore = "^1.31.62"
gunicorn = "^21.2.0"
yacs = "^0.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
mypy = "^0.991"
flake8 = "^6.0.0"
black = "^22.10.0"
freezegun = "^1.2.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
